implementando Swagger-ui

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,13 @@ spring.datasource.username=h2
 spring.datasource.password=h2
 
 
-ruta.imagenes=/h2/imagenes
-
 #Habilitar o Desabilitar api-doc swagger-ui
-#springdoc.api-docs-enabled=true
-#springdoc.swagger-ui.enabled=true
+springdoc.api-docs-enabled=true
+springdoc.swagger-ui.enabled=true
 #Define Ruta del Swagger-ui
-#springdoc.swagger-ui.path=/doc/swagger-ui.html
+springdoc.swagger-ui.path=/doc/swagger-ui.html
 
 #seleciona los paquetes y clases a escanear
-#springdoc.pathsToMatch=/**,/vendedor/**,/xyz/**
+springdoc.pathsToMatch=/**
 
 
