--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+	<!--Dependencias de Spring Security-->
+	<dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+	<dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+	  </dependency>
+	  <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>6.1.4</version> <!-- Reemplaza con la versión adecuada de Spring Security -->
+	</dependency>
 	</dependencies>
 
 	<build>
