--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.h2.console.enable=true
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;NON_KEYWORDS=user
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=h2
 spring.datasource.password=h2
+spring.h2.console.path=/h2-console
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 #Habilitar o Desabilitar api-doc swagger-ui
